修改主页及数据库

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.example.lihongzheng.meishi"
         minSdkVersion 15
@@ -25,4 +26,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'cn.bmob.android:bmob-im:2.0.5@aar'
+    implementation 'cn.bmob.android:bmob-sdk:3.4.7-aar'
+    implementation 'cn.bmob.android:bmob-sdk:3.5.0'
+    implementation 'cn.bmob.android:bmob-push:0.8'
+    implementation 'cn.bmob.android:http-legacy:1.0'
 }
