--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,17 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+//    implementation 'cn.bmob.android:bmob-im:2.0.5@aar'
+//    implementation 'cn.bmob.android:bmob-sdk:3.4.7-aar'
+//    implementation 'cn.bmob.android:bmob-sdk:3.5.0'
+//    implementation 'cn.bmob.android:bmob-push:0.8'
+//    implementation 'cn.bmob.android:http-legacy:1.0'
+
+    implementation 'cn.bmob.android:bmob-sdk:3.5.5'
+    implementation 'cn.bmob.android:bmob-push:0.8'
     implementation 'cn.bmob.android:bmob-im:2.0.5@aar'
     implementation 'cn.bmob.android:bmob-sdk:3.4.7-aar'
-    implementation 'cn.bmob.android:bmob-sdk:3.5.0'
-    implementation 'cn.bmob.android:bmob-push:0.8'
+    implementation 'cn.bmob.android:bmob-sms:1.0.1'
     implementation 'cn.bmob.android:http-legacy:1.0'
+
 }
